# syntaks

./: Cargo.toml  LICENSE.txt
.cargo/: config.toml
src/: bitboard.rs  board.rs  command_channel.rs  core.rs  correction.rs  eval.rs  history.rs  hits.rs  keys.rs  limit.rs  main.rs  movegen.rs  movepick.rs  perft.rs  prng.rs  road.rs  search.rs  takmove.rs  tei.rs  thread.rs  ttable.rs  util.rs
src/datagen/: mod.rs  synpack.rs
src/hits/: magic.rs  naive.rs  pext.rs
src/road/: sse.rs
src/util/: command_channel.rs  counter.rs
