[package]
name = "syntaks"
version = "0.1.0"
edition = "2024"

[features]
pext = []
datagen = ["dep:ctrlc", "dep:bytemuck"]

[dependencies]
arrayvec = "0.7.6"
bytemuck = { version = "1.25.0", features = ["derive"], optional = true }
ctrlc = { version = "3.5.1", optional = true }
getrandom = "0.4.1"
rand = { version = "0.9.2", default-features = false }
static_init = "1.0.4"
